--- a/src/App.scss
+++ b/src/App.scss
@@ -1,42 +1,19 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: hsla(49, 100%, 94%, 1);
+  background-image:
+    radial-gradient(circle at 88% 0%, rgba(245, 86, 126, 0.342) 0px, transparent 50%),
+    radial-gradient(circle at 50% 66%, hsla(336, 0%, 98%, 1) 0px, transparent 50%),
+    radial-gradient(circle at 37% 100%, rgba(245, 86, 126, 0.644) 0px, transparent 50%),
+    radial-gradient(circle at 73% 75%, hsla(230, 0%, 98%, 1) 0px, transparent 50%),
+    radial-gradient(circle at 100% 100%, hsla(345, 89%, 65%, 1) 0px, transparent 50%),
+    radial-gradient(circle at 59% 47%, hsla(49, 100%, 94%, 1) 0px, transparent 50%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
