--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,14 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
 body::before {
   content: "";
   position: fixed;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100vw;
