se cambia valores absolutos de las imágenes por relativos

--- a/src/components/name/name.scss
+++ b/src/components/name/name.scss
@@ -48,7 +48,7 @@
 
 .osito1 {
     z-index: 1;
-    bottom: 30px;
+    bottom: 1%;
     right: 15%;
     position: absolute;
     width: 250px;
@@ -58,8 +58,8 @@
 
 .nube2 {
     z-index: 2;
-    bottom: -170px;
-    left: -51px;
+    bottom: -20%;
+    left: -20%;
     position: absolute;
     width: 400px;
     height: 600px;
