--- a/src/components/name/name.scss
+++ b/src/components/name/name.scss
@@ -51,8 +51,8 @@
     bottom: 1%;
     right: 15%;
     position: absolute;
-    width: 250px;
-    height: 375px;
+    width: 50%;
+    height: auto;
     rotate: 8deg;
 }
 
@@ -61,6 +61,6 @@
     bottom: -20%;
     left: -20%;
     position: absolute;
-    width: 400px;
-    height: 600px;
+    width: 100%;
+    height: auto;
 }
