--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,13 @@
+html{
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+}
+
+section{
+    height: 100vh;
+    scroll-snap-align: center;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -7,6 +17,10 @@ html, body {
 
 body::before {
   content: "";
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  position: relative;
   position: fixed;
   z-index: -1;
   top: 0;
