--- a/src/components/name/name.scss
+++ b/src/components/name/name.scss
@@ -1,66 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    position: relative;
+}
+
 .nube3 {
-    z-index: 1;
-    top: -320px;
-    left: -251px;
     position: absolute;
-    width: 500px;
-    height: 750px;
+    top: -30vh;
+    left: -40vw;
+    width: 100vw;
+    max-width: 500px;
+    height: auto;
     opacity: 60%;
+    z-index: 1;
 }
 
 .osito2 {
-    z-index: 1;
-    top: 50px;
-    left: 0;
     position: absolute;
-    width: 150px;
-    height: 225px;
+    top: 5vh;
+    left: 0;
+    width: 45vw;
+    max-width: 150px;
+    height: auto;
     opacity: 70%;
     rotate: 10deg;
+    z-index: 1;
 }
 
 .container {
     width: 100vw;
     height: 100vh;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     .message {
-        width: 60%;
-        margin: -30% 0 0 0;
-        font-size: 40px;
-        font-family: 'Dancing Script', regular;
-        color: rgba(0, 0, 0, 0.650);
+        width: 80%;
+        font-size: 10vw;
+        max-font-size: 40px;
+        font-family: 'Dancing Script', cursive;
+        color: rgba(0, 0, 0, 0.65);
         text-align: center;
+        margin-top: -20vh;
     }
 
     .name {
-        font-size: 100px;
-        font-family: 'Dancing Script', regular;
-        color: rgba(0, 0, 0, 0.650);
+        font-size: 30vw;
+        font-family: 'Dancing Script', cursive;
+        color: rgba(0, 0, 0, 0.65);
     }
 }
 
 .osito1 {
-    z-index: 1;
-    bottom: 1%;
-    right: 15%;
     position: absolute;
-    width: 50%;
+    bottom: 2vh;
+    right: 10vw;
+    width: 60vw;
+    max-width: 250px;
     height: auto;
     rotate: 8deg;
+    z-index: 1;
 }
 
 .nube2 {
-    z-index: 2;
-    bottom: -20vw;
-    left: -20%;
     position: absolute;
-    width: 100%;
+    bottom: -25vh;
+    left: -15vw;
+    width: 100vw;
     height: auto;
+    z-index: 2;
 }
