--- a/src/components/name/name.scss
+++ b/src/components/name/name.scss
@@ -46,9 +46,9 @@ body {
     justify-content: center;
 
     .message {
+        z-index: inherit;
         width: 80%;
-        font-size: 10vw;
-        max-font-size: 40px;
+        font-size: 8vw;
         font-family: 'Dancing Script', cursive;
         color: rgba(0, 0, 0, 0.65);
         text-align: center;
@@ -56,6 +56,7 @@ body {
     }
 
     .name {
+        z-index: inherit;
         font-size: 30vw;
         font-family: 'Dancing Script', cursive;
         color: rgba(0, 0, 0, 0.65);
@@ -66,7 +67,7 @@ body {
     position: absolute;
     bottom: 2vh;
     right: 10vw;
-    width: 60vw;
+    width: 50vw;
     max-width: 250px;
     height: auto;
     rotate: 8deg;
@@ -75,7 +76,7 @@ body {
 
 .nube2 {
     position: absolute;
-    bottom: -25vh;
+    bottom: -28vh;
     left: -15vw;
     width: 100vw;
     height: auto;
