--- a/src/components/name/name.scss
+++ b/src/components/name/name.scss
@@ -2,6 +2,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 
+$scrollbar-width: 12px;
+$scrollbar-height: 12px;
+$scrollbar-track-color: rgba(0, 0, 0, 0.05);
+$scrollbar-track-border: 2px solid rgba(0, 0, 0, 0.1);
+$scrollbar-thumb-color: rgba(31, 38, 135, 0.4);
+$scrollbar-thumb-hover: rgba(31, 38, 135, 0.6);
+$scrollbar-thumb-border: 3px solid rgba(255, 255, 255, 0.5);
+$scrollbar-thumb-radius: 8px;
+
+
+::-webkit-scrollbar {
+    width: $scrollbar-width;
+    height: $scrollbar-height;
+}
+
+::-webkit-scrollbar-track {
+    background: $scrollbar-track-color;
+    border: $scrollbar-track-border;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $scrollbar-thumb-color;
+    border-radius: $scrollbar-thumb-radius;
+    border: $scrollbar-thumb-border;
+
+    &:hover {
+        background-color: $scrollbar-thumb-hover;
+    }
+}
+
+// Firefox
+* {
+    scrollbar-width: thin;
+    scrollbar-color: $scrollbar-thumb-color $scrollbar-track-color;
+}
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -14,97 +51,101 @@ body {
     position: relative;
 }
 
-.parte1 {
-    position: relative;
-    width: 100vw;
-    height: 33.3vh;
-    z-index: 2;
+$bp-mobile-max: 767px;
+$bp-tablet: 768px;
+$bp-ipad: 1024px;
+$bp-desktop: 1200px;
 
+.parte1,
+.parte2,
+.parte3 {
+    width: 100vw;
+    position: relative;
+    z-index: 2;
+}
+
+// === MOBILE ===
+.parte1,
+.parte2,
+.parte3 {
+    height: 33.33vh;
+}
+
+// PARTE 1
+.parte1 {
     .nube3 {
         position: absolute;
-        top: -30vh;
-        left: -40vw;
-        width: 100vw;
-        max-width: 500px;
-        height: auto;
-        opacity: 60%;
+        top: -20vh;
+        left: -50vw;
+        width: 120vw;
+        max-width: 400px;
+        opacity: 0.6;
     }
 
     .osito2 {
         position: absolute;
         top: 5vh;
-        left: 0;
-        width: 45vw;
-        max-width: 150px;
-        height: auto;
-        opacity: 70%;
-        rotate: 10deg;
+        left: 5vw;
+        width: 40vw;
+        max-width: 120px;
+        opacity: 0.8;
+        transform: rotate(10deg);
     }
 }
 
+// PARTE 2
 .parte2 {
-    position: relative;
-    width: 100vw;
-    height: 33.3vh;
-    z-index: 2;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 
     .message {
-        z-index: inherit;
-        font-size: 10vw;
         font-family: 'Dancing Script', cursive;
+        font-size: 8vw;
         color: rgba(0, 0, 0, 0.65);
-        text-align: center;
+        width: 80vw;
     }
 
     .name {
-        z-index: inherit;
-        font-size: 30vw;
         font-family: 'Dancing Script', cursive;
+        font-size: 25vw;
         color: rgba(0, 0, 0, 0.65);
     }
-
 }
 
+// PARTE 3
 .parte3 {
-    position: relative;
-    width: 100vw;
-    height: 33.3vh;
-    z-index: 2;
-
+    .nube2 {
+        position: absolute;
+        bottom: -35vh;
+        left: -20vw;
+        width: 120vw;
+        max-width: 500px;
+        z-index: 1;
+    }
 
     .osito1 {
         position: absolute;
         bottom: 2vh;
-        right: 10vw;
-        width: 50vw;
-        max-width: 250px;
-        height: auto;
-        rotate: 8deg;
-        z-index: 1;
-    }
-
-    .nube2 {
-        position: absolute;
-        bottom: -28vh;
-        left: -15vw;
-        width: 100vw;
-        height: auto;
-        z-index: 2;
+        right: 5vw;
+        width: 45vw;
+        max-width: 200px;
+        transform: rotate(8deg);
     }
 
     button {
         position: absolute;
-        width: 100px;
-        height: 100px;
-        z-index: 999;
-        font-size: 4vw;
         bottom: 8vh;
-        border-radius: 50%;
-        border: none;
         left: 50%;
         transform: translateX(-50%);
+        width: 100px;
+        height: 100px;
+        font-size: 4.5vw;
+        border-radius: 50%;
         font-family: 'Dancing Script', cursive;
+        z-index: 3;
 
         background: radial-gradient(circle at 65% 35%,
                 rgba(255, 255, 255, 0.8) 0%,
@@ -126,15 +167,176 @@ body {
 
     button:hover {
         transform: translateX(-50%) scale(1.05);
-        box-shadow:
-            0 12px 40px rgba(31, 38, 135, 0.3),
-            inset 0 6px 25px rgba(255, 255, 255, 0.6),
-            inset 0 -6px 15px rgba(0, 0, 0, 0.1);
     }
 
     button:active {
         transform: translateX(-50%) scale(0.98);
         filter: brightness(0.95);
     }
+}
 
+// === TABLET ===
+@media (min-width: $bp-tablet) {
+    .parte1 {
+        height: 33vh;
+    }
+
+    .parte2 {
+        height: 33vh;
+    }
+
+    .parte3 {
+        height: 33vh;
+    }
+
+    .parte1 {
+        .nube3 {
+            top: -25vh;
+            left: -5vw;
+            max-width: 500px;
+        }
+
+        .osito2 {
+            top: 6vh;
+            left: 15vw;
+            width: 35vw;
+            max-width: 140px;
+        }
+    }
+
+    .parte2 {
+        .message {
+            font-size: 6vw;
+        }
+
+        .name {
+            font-size: 20vw;
+        }
+    }
+
+    .parte3 {
+        .nube2 {
+            bottom: -30vh;
+            left: -18vw;
+            max-width: 550px;
+        }
+
+        .osito1 {
+            width: 35vw;
+            max-width: 320px;
+        }
+
+        button {
+            width: 150px;
+            height: 150px;
+            font-size: 4.5vw;
+        }
+    }
+}
+
+// === IPAD PRO (≥1024px && <1200px) ===
+@media (min-width: $bp-ipad) and (max-width: ($bp-desktop - 1)) {
+
+    .parte1,
+    .parte2,
+    .parte3 {
+        height: 30vh;
+    }
+
+    .parte1 {
+        .nube3 {
+            top: -30vh;
+            left: -10vw;
+            max-width: 650px;
+        }
+
+        .osito2 {
+            top: 5vh;
+            left: 12vw;
+            width: 32vw;
+            max-width: 200px;
+        }
+    }
+
+    .parte2 {
+        .message {
+            font-size: 5vw;
+        }
+
+        .name {
+            font-size: 25vw;
+        }
+    }
+
+    .parte3 {
+        .nube2 {
+            bottom: -25vh;
+            left: -5vw;
+            max-width: 650px;
+        }
+
+        .osito1 {
+            width: 30vw;
+            max-width: 350px;
+        }
+
+        button {
+            width: 180px;
+            height: 180px;
+            font-size: 4vw;
+        }
+    }
+}
+
+// === DESKTOP (≥1200px) ===
+@media (min-width: $bp-desktop) {
+
+    .parte1,
+    .parte2,
+    .parte3 {
+        height: 33vh;
+    }
+
+    .parte1 {
+        .nube3 {
+            top: -55vh;
+            left: -12vw;
+        }
+
+        .osito2 {
+            top: 4vh;
+            left: 8vw;
+            width: 30vw;
+            max-width: 160px;
+        }
+    }
+
+    .parte2 {
+        .message {
+            font-size: 4vw;
+        }
+
+        .name {
+            font-size: 10vw;
+            letter-spacing: 4px;
+        }
+    }
+
+    .parte3 {
+        .nube2 {
+            bottom: -58vh;
+            left: 45vw;
+        }
+
+        .osito1 {
+            width: 20vw;
+            max-width: 200px;
+        }
+
+        button {
+            width: 120px;
+            height: 120px;
+            font-size: 2vw;
+        }
+    }
 }
