colores segunda section

--- a/src/components/invitacion/invitacion.scss
+++ b/src/components/invitacion/invitacion.scss
@@ -65,8 +65,13 @@ $bp-desktop: 1200px;
 
 .container1{
     z-index: 1;
+    background-color: aqua;
 }
 
 .container2{
-    
+    background-color: black;
+}
+
+.container3{
+    background-color: blue;
 }
