--- a/src/components/name/name.scss
+++ b/src/components/name/name.scss
@@ -244,7 +244,7 @@ $bp-desktop: 1200px;
             max-width: 320px;
         }
 
-        button {
+        .glass {
             width: 150px;
             height: 150px;
             font-size: 4.5vw;
@@ -298,7 +298,7 @@ $bp-desktop: 1200px;
             max-width: 350px;
         }
 
-        button {
+        .glass {
             width: 180px;
             height: 180px;
             font-size: 4vw;
