--- a/src/components/confirmacion/confirmacion.scss
+++ b/src/components/confirmacion/confirmacion.scss
@@ -86,10 +86,6 @@ $bp-desktop: 1200px;
     -moz-box-shadow: 0px 6px 22px 0px rgba(0, 0, 0, 0.48);
 
     .close {
-        // position: absolute;
-        // bottom: 1vh;
-        // right: 1vw;
-        // max-width: 100px;
         width: 20%;
     }
 
@@ -130,6 +126,7 @@ $bp-desktop: 1200px;
             color: #F8AEBE;
             text-align: center;
             font-size: 1.2rem;
+            text-transform: capitalize;
 
             &::placeholder {
                 color: #F8AEBE;
