--- a/src/pages/listaDeseos.scss
+++ b/src/pages/listaDeseos.scss
@@ -35,9 +35,6 @@ $bp-desktop: 1200px;
         list-style: none;
         padding: 0;
         margin: 0 0 2rem;
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: space-around;
         height: 50vh;
         min-height: 400px;
         overflow-y: auto;
@@ -113,6 +110,7 @@ $bp-desktop: 1200px;
     border-radius: 10px;
     color: #F784A0;
     font-size: 1.2rem;
+    text-transform: capitalize;
 
     &::placeholder {
         color: #F8AEBE;
