--- a/src/pages/invitacionConfirmada.scss
+++ b/src/pages/invitacionConfirmada.scss
@@ -171,6 +171,7 @@ $bp-desktop: 1200px;
     .compartirBtn {
         border: none;
         background-color: transparent;
+        cursor: pointer;
 
         .compartir {
             max-width: 100px;
